--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -63,4 +63,5 @@
       .column.span-24= render :partial => 'shared/footer'
 
     = javascript_include_tag 'swfobject', 'jquery', 'jquery-ui', 'jquery-fx', 'jquery.tablesorter', 'jrails', 'application', :cache => 'cache/all'
+    = yield :footer
     = render :partial => 'shared/google_analytics' unless Rails.env == 'development'
