--- a/app/views/shared/_footer.haml
+++ b/app/views/shared/_footer.haml
@@ -4,7 +4,7 @@
     = '&middot;'
     = link_to 'Project home'[], 'http://scorekeepr.dk/'
     = '&middot;'
-    = link_to 'Feedback'[], 'http://scorekeepr.uservoice.com/'
+    = link_to 'Feedback'[], 'http://feedback.scorekeepr.dk/'
     = '&middot;'
     = link_to 'Issue tracker'[], 'http://code.google.com/p/scorekeeper/issues/list'
     = '&middot;'
