--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -24,13 +24,16 @@
         .column.span-20= render :partial => 'shared/menu'
         - unless current_game.nil? || current_game.new_record?
           #add_match.column.span-4.last
-            - if enabled_users.size >= current_game.team_size * 2
-              = link_to_function css_image_tag('icons/add.png') + ' ' + 'Add match'[], "scoreKeeper.newMatch.toggle()"
+            - if current_game.locked?
+              .locked This game is locked.
             - else
-              - if current_game.team_size * 2 - enabled_users.size == 1
-                #user_minimum= 'Add one more user'[:add_one_more_user]
+              - if enabled_users.size >= current_game.team_size * 2
+                = link_to_function css_image_tag('icons/add.png') + ' ' + 'Add match'[], "scoreKeeper.newMatch.toggle()"
               - else
-                #user_minimum= 'Add {users_needed} more users'[:add_x_more_ser, current_game.team_size * 2 - enabled_users.size]
+                - if current_game.team_size * 2 - enabled_users.size == 1
+                  #user_minimum= 'Add one more user'[:add_one_more_user]
+                - else
+                  #user_minimum= 'Add {users_needed} more users'[:add_x_more_ser, current_game.team_size * 2 - enabled_users.size]
       
       = render :partial => 'shared/submenu'
   
