--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -64,6 +64,11 @@ textarea
   
   a:hover
     :text-decoration none
+    
+  .locked
+    :padding-right 21px
+    :padding-top 9px
+    :color #FFFFFF
   
   #add_match
     :text-align right
