Add clean sheet tracking.

--- a/public/stylesheets/sprites.css
+++ b/public/stylesheets/sprites.css
@@ -4,14 +4,15 @@
 .sprite-arrow_up { display: table-cell; display: inline-block; width: 16px; height: 16px; background: url('/images/sprites.9f8e117683295cf49d5eb81e1c75f5001b72845a.cache.png') -1px -52px no-repeat; }
 .sprite-blank { display: table-cell; display: inline-block; width: 1px; height: 1px; background: url('/images/sprites.9f8e117683295cf49d5eb81e1c75f5001b72845a.cache.png') -1px -69px no-repeat; }
 .sprite-chart_bar { display: table-cell; display: inline-block; width: 16px; height: 16px; background: url('/images/sprites.9f8e117683295cf49d5eb81e1c75f5001b72845a.cache.png') -1px -71px no-repeat; }
-.sprite-comment { display: table-cell; display: inline-block; width: 16px; height: 16px; background: url('/images/sprites.9f8e117683295cf49d5eb81e1c75f5001b72845a.cache.png') -1px -88px no-repeat; }
-.sprite-game { display: table-cell; display: inline-block; width: 16px; height: 16px; background: url('/images/sprites.9f8e117683295cf49d5eb81e1c75f5001b72845a.cache.png') -1px -105px no-repeat; }
-.sprite-header_left { display: table-cell; display: inline-block; width: 5px; height: 5px; background: url('/images/sprites.9f8e117683295cf49d5eb81e1c75f5001b72845a.cache.png') -1px -122px no-repeat; }
-.sprite-header_right { display: table-cell; display: inline-block; width: 5px; height: 5px; background: url('/images/sprites.9f8e117683295cf49d5eb81e1c75f5001b72845a.cache.png') -1px -128px no-repeat; }
-.sprite-logo { display: table-cell; display: inline-block; width: 241px; height: 38px; background: url('/images/sprites.9f8e117683295cf49d5eb81e1c75f5001b72845a.cache.png') -1px -134px no-repeat; }
-.sprite-medal_gold_2 { display: table-cell; display: inline-block; width: 16px; height: 16px; background: url('/images/sprites.9f8e117683295cf49d5eb81e1c75f5001b72845a.cache.png') -1px -173px no-repeat; }
-.sprite-rss { display: table-cell; display: inline-block; width: 17px; height: 17px; background: url('/images/sprites.9f8e117683295cf49d5eb81e1c75f5001b72845a.cache.png') -1px -190px no-repeat; }
-.sprite-sort_asc { display: table-cell; display: inline-block; width: 21px; height: 4px; background: url('/images/sprites.9f8e117683295cf49d5eb81e1c75f5001b72845a.cache.png') -1px -208px no-repeat; }
-.sprite-sort_desc { display: table-cell; display: inline-block; width: 21px; height: 4px; background: url('/images/sprites.9f8e117683295cf49d5eb81e1c75f5001b72845a.cache.png') -1px -213px no-repeat; }
-.sprite-sort_none { display: table-cell; display: inline-block; width: 21px; height: 9px; background: url('/images/sprites.9f8e117683295cf49d5eb81e1c75f5001b72845a.cache.png') -1px -218px no-repeat; }
-.sprite-table { display: table-cell; display: inline-block; width: 16px; height: 16px; background: url('/images/sprites.9f8e117683295cf49d5eb81e1c75f5001b72845a.cache.png') -1px -228px no-repeat; }
+.sprite-clean_sheet { display: table-cell; display: inline-block; width: 16px; height: 16px; background: url('/images/sprites.9f8e117683295cf49d5eb81e1c75f5001b72845a.cache.png') -1px -88px no-repeat; }
+.sprite-comment { display: table-cell; display: inline-block; width: 16px; height: 16px; background: url('/images/sprites.9f8e117683295cf49d5eb81e1c75f5001b72845a.cache.png') -1px -105px no-repeat; }
+.sprite-game { display: table-cell; display: inline-block; width: 16px; height: 16px; background: url('/images/sprites.9f8e117683295cf49d5eb81e1c75f5001b72845a.cache.png') -1px -122px no-repeat; }
+.sprite-header_left { display: table-cell; display: inline-block; width: 5px; height: 5px; background: url('/images/sprites.9f8e117683295cf49d5eb81e1c75f5001b72845a.cache.png') -1px -139px no-repeat; }
+.sprite-header_right { display: table-cell; display: inline-block; width: 5px; height: 5px; background: url('/images/sprites.9f8e117683295cf49d5eb81e1c75f5001b72845a.cache.png') -1px -145px no-repeat; }
+.sprite-logo { display: table-cell; display: inline-block; width: 241px; height: 38px; background: url('/images/sprites.9f8e117683295cf49d5eb81e1c75f5001b72845a.cache.png') -1px -151px no-repeat; }
+.sprite-medal_gold_2 { display: table-cell; display: inline-block; width: 16px; height: 16px; background: url('/images/sprites.9f8e117683295cf49d5eb81e1c75f5001b72845a.cache.png') -1px -190px no-repeat; }
+.sprite-rss { display: table-cell; display: inline-block; width: 17px; height: 17px; background: url('/images/sprites.9f8e117683295cf49d5eb81e1c75f5001b72845a.cache.png') -1px -207px no-repeat; }
+.sprite-sort_asc { display: table-cell; display: inline-block; width: 21px; height: 4px; background: url('/images/sprites.9f8e117683295cf49d5eb81e1c75f5001b72845a.cache.png') -1px -225px no-repeat; }
+.sprite-sort_desc { display: table-cell; display: inline-block; width: 21px; height: 4px; background: url('/images/sprites.9f8e117683295cf49d5eb81e1c75f5001b72845a.cache.png') -1px -230px no-repeat; }
+.sprite-sort_none { display: table-cell; display: inline-block; width: 21px; height: 9px; background: url('/images/sprites.9f8e117683295cf49d5eb81e1c75f5001b72845a.cache.png') -1px -235px no-repeat; }
+.sprite-table { display: table-cell; display: inline-block; width: 16px; height: 16px; background: url('/images/sprites.9f8e117683295cf49d5eb81e1c75f5001b72845a.cache.png') -1px -245px no-repeat; }
