--- a/app/views/games/_form.html.haml
+++ b/app/views/games/_form.html.haml
@@ -15,12 +15,6 @@
           %div.radio
             = f.radio_button(:team_size, team_size, :id => "game_team_size_#{team_size}", :class => 'radio') + f.label("team_size_#{team_size}", "#{team_size}-on-#{team_size}")
         .notes= 'Number of players on each team.'[]
-        
-  %tr
-    %td.label= f.label :locked
-    %td.field
-      = f.check_box :locked
-      .notes Used to prevent users from adding new matches to the game.
 
   %tr
     %td.label &nbsp;
@@ -28,6 +22,18 @@
     
 %h3= 'Details'[]
 %table.form
+  %tr
+    %td.label= f.label :track_clean_sheets
+    %td.field
+      = f.check_box :track_clean_sheets
+      .notes Enable to keep track of clean sheets.
+
+  %tr
+    %td.label= f.label :locked
+    %td.field
+      = f.check_box :locked
+      .notes Used to prevent users from adding new matches to the game.
+
   %tr
     %td.label= 'Player roles'[]
     %td.field
