--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -25,7 +25,9 @@
         - unless current_game.nil? || current_game.new_record?
           #add_match.column.span-4.last
             - if current_game.locked?
-              .locked This game is locked.
+              .locked
+                = css_image_tag('icons/lock.gif')
+                This game is locked.
             - else
               - if enabled_users.size >= current_game.team_size * 2
                 = link_to_function css_image_tag('icons/add.png') + ' ' + 'Add match'[], "scoreKeeper.newMatch.toggle()"
