--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -27,7 +27,7 @@
             - if current_game.locked?
               .locked
                 = css_image_tag('icons/lock.gif')
-                This game is locked.
+                Locked
             - else
               - if enabled_users.size >= current_game.team_size * 2
                 = link_to_function css_image_tag('icons/add.png') + ' ' + 'Add match'[], "scoreKeeper.newMatch.toggle()"
